fixed a bug with the details selector and arrow selectors overlapping

--- a/client/src/pages/DriverTreePage.module.css
+++ b/client/src/pages/DriverTreePage.module.css
@@ -121,6 +121,7 @@
   left: 60px;
   font-style: italic;
   font-size: 8px;
+  width: 50px;
   z-index: 1000;
 }
 
